feat: readme file and some updates in retrive users
